ingress-resources.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /uniborrow-users(?:/|$)(.*)
            backend:
              serviceName: uniborrow-users
              servicePort: 8080
          - path: /uniborrow-items(?:/|$)(.*)
            backend:
              serviceName: items
              servicePort: 8080
          - path: /uniborrow-loans(?:/|$)(.*)
            backend:
              serviceName: uniborrow-loans
              servicePort: 8080
          - path: /uniborrow-chat(?:/|$)(.*)
            backend:
              serviceName: uniborrow-chat
              servicePort: 8085
          - path: /uniborrow-cash(?:/|$)(.*)
            backend:
              serviceName: uniborrow-cash
              servicePort: 8080
          - path: /(.*)
            backend:
              serviceName: uniborrow-frontend
              servicePort: 80
